# python-flatgeobuf

./: .gitignore  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: ci.yaml
flatgeobuf/: __init__.py  async_http_reader.py  bbox_filter.py  column_meta.py  config.py  constants.py  crs_meta.py  file_range_client.py  file_reader.py  header_meta.py  http_range_client.py  http_reader.py  packedrtree.py
flatgeobuf/FlatGeobuf/: Column.py  ColumnType.py  Crs.py  Feature.py  Geometry.py  GeometryType.py  Header.py
flatgeobuf/generic/: __init__.py  feature.py  featurecollection.py  geometry.py
flatgeobuf/geojson/: __init__.py  feature.py  featurecollection.py  geometry.py  reader.py
tests/: test_reader.py
tests/data/: countries.geojson
